--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Marcel Assunção | Desenvolvedor Backend</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Assets/CSS/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
@@ -33,7 +33,7 @@
       <p>Desenvolvedor Backend apaixonado por tecnologia e design.</p>
     </div>
     <div class="home-imagem">
-      <img src="" alt="Foto de Perfil">
+      <img src="Assets/Imagens/Perfil.jpg" alt="Foto de Perfil">
     </div>
   </section>
 
@@ -105,7 +105,7 @@
     <p>&copy; 2025 Marcel Assunção. Todos os direitos reservados.</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="Scripts/script.js"></script>
 
 </body>
 
