--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
   <header>
     <nav>
-      <h1>Marcel Assunção</h1>
       <ul>
-        <li><a href="#home">Início</a></li>
+        <li><a href="#inicio">Início</a></li>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#formAcademica">Formação Academica</a></li>
         <li><a href="#formProfi">Formação Profissional</a></li>
@@ -27,13 +26,17 @@
     </nav>
   </header>
 
-  <section id="home" class="home-container">
-    <div class="home-texto">
-      <h2>Olá, eu sou Marcel Assunção da Silva</h2>
-      <p>Desenvolvedor Backend apaixonado por tecnologia e design.</p>
-    </div>
-    <div class="home-imagem">
-      <img src="Assets/Imagens/Perfil.jpg" alt="Foto de Perfil">
+  <p id="inicio"></p>
+  <section id="home">
+    <div class="home-container">
+      <div class="home-text">
+        <h3>Olá, eu sou o </h3>
+        <h1>Marcel Assunção da Silva</h1>
+        <p>Técnico em Informática apaixonado por tecnologia e Backend.</p>
+      </div>
+      <div class="home-image">
+        <img src="Assets/Imagens/Perfil.jpg" alt="Foto de Perfil">
+      </div>
     </div>
   </section>
 
@@ -88,9 +91,9 @@
         <i class="fas fa-share-alt"></i>
         <h3>Redes Sociais</h3>
         <div class="social-icons">
-          <a href="#"><i class="fab fa-linkedin-in"></i></a>
-          <a href="#"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-google"></i></a>
+          <a href="https://www.linkedin.com/in/marcel-assun%C3%A7%C3%A3o-da-silva-73692324b/"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/MarcelAssu"><i class="fab fa-github"></i></a>
+          <a href="https://www.instagram.com/marcel.assuncao_/"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
       <div class="contato-box">
