Formação Profissional realizada

--- a/index.html
+++ b/index.html
@@ -40,19 +40,73 @@
     </div>
   </section>
 
+  <hr>
   <section id="sobre">
     <h2>Sobre mim</h2>
-    <p>Sou estudante de Ciência da Computação e estou em constante aprendizado na área de desenvolvimento web.</p>
+    <p>Olá, me chamo Marcel, tenho o curso de Técnico em Informática completo pela IFSUL e estou atualmente cursando meu bacharelado em Ciência da Computação na Atitus Educação. 
+      Tenho um ótimo espírito de coleguismo para trabalho em equipe e uma grande vontade em aperfeiçoar meus conhecimentos.</p>
   </section>
 
   <section id="formAcademica">
     <h2>Formação Academica</h2>
-    <p>Sou estudante de Ciência da Computação e estou em constante aprendizado na área de desenvolvimento web.</p>
+    <div class="linha-tempo">
+      <div class="item">
+        <div class="periodo">2024 - 2027</div>
+        <div class="conteudo">
+          <h3>ATITUS EDUCAÇÃO</h3>
+          <p class="cargo">Ciência da Computação</p>
+          <ul>
+            <li>Formação superior com foco em fundamentos da computação, estruturas de dados, algoritmos e desenvolvimento de sistemas, abrangendo tanto teoria quanto prática da computação.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="item">
+        <div class="periodo">2023 - 2024</div>
+        <div class="conteudo">
+          <h3>Anhanguera</h3>
+          <p class="cargo">ADS - Análise e Desenvolvimento de Sistemas</p>
+          <ul>
+            <li>Formação superior com foco em desenvolvimento de software, banco de dados e lógica de programação, com ênfase em aplicações web e mobile.</li>
+            <p id="incompleto">INCOMPLETO</p>
+          </ul>
+        </div>
+      <div class="item">
+        <div class="periodo">2019 - 2021</div>
+        <div class="conteudo">
+          <h3>IFSUL - Instituto Federal</h3>
+          <p class="cargo">Técnico em Informática</p>
+          <ul>
+            <li>Formação técnica com foco em programação, redes e manutenção de computadores, de forma Integrada com o Ensino Médio.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="formProfi">
     <h2>Formação Profissional</h2>
-    <p>Sou estudante de Ciência da Computação e estou em constante aprendizado na área de desenvolvimento web.</p>
+    <div class="linha-tempo">
+      <div class="item">
+        <div class="periodo">2020 - 2024</div>
+        <div class="conteudo">
+          <h3>ATITUS EDUCAÇÃO</h3>
+          <p class="cargo">Bacharelado em Design</p>
+          <ul>
+            <li>Curso voltado para desenvolvimento de projetos gráficos, identidade visual e design digital.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="item">
+
+        <div class="conteudo">
+          <h3>IFRS - Instituto Federal</h3>
+          <p class="cargo">Técnico em Informática</p>
+          <ul>
+            <li>Formação técnica com foco em programação, redes e manutenção de computadores.</li>
+          </ul>
+        </div>
+
+    </div>
   </section>
 
   <section id="habilidades">
@@ -62,6 +116,7 @@
       <li>CSS</li>
       <li>JavaScript</li>
       <li>Git e GitHub</li>
+      <li>Java</li>
     </ul>
   </section>
 
