--- a/index.html
+++ b/index.html
@@ -111,13 +111,32 @@
 
   <section id="habilidades">
     <h2>Habilidades</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
-      <li>Git e GitHub</li>
-      <li>Java</li>
-    </ul>
+    <div class="lista-habilidades">
+      <div class="habilidade">
+        <img src="Assets/Imagens/html.png" alt="HTML">
+        <p>HTML</p>
+      </div>
+      <div class="habilidade">
+        <img src="Assets/Imagens/css.png" alt="CSS">
+        <p>CSS</p>
+      </div>
+      <div class="habilidade">
+        <img src="Assets/Imagens/javascript.webp" alt="JavaScript">
+        <p>JavaScript</p>
+      </div>
+      <div class="habilidade">
+        <img src="Assets/Imagens/git.png" alt="Git & GitHub">
+        <p>Git & GitHub</p>
+      </div>
+      <div class="habilidade">
+        <img src="Assets/Imagens/python.webp" alt="Python">
+        <p>Python</p>
+      </div>
+      <div class="habilidade">
+        <img src="Assets/Imagens/java.png" alt="Java">
+        <p>Java</p>
+      </div>
+    </div>
   </section>
 
   <section id="projetos">
@@ -161,6 +180,7 @@
 
   <footer>
     <p>&copy; 2025 Marcel Assunção. Todos os direitos reservados.</p>
+    <P><a href="#inicio">Voltar ao Início</a></P>
   </footer>
 
   <script src="Scripts/script.js"></script>
