Formação Profissional feita

--- a/index.html
+++ b/index.html
@@ -85,26 +85,28 @@
 
   <section id="formProfi">
     <h2>Formação Profissional</h2>
-    <div class="linha-tempo">
-      <div class="item">
-        <div class="periodo">2020 - 2024</div>
-        <div class="conteudo">
-          <h3>ATITUS EDUCAÇÃO</h3>
-          <p class="cargo">Bacharelado em Design</p>
-          <ul>
-            <li>Curso voltado para desenvolvimento de projetos gráficos, identidade visual e design digital.</li>
-          </ul>
-        </div>
-      </div>
-      <div class="item">
+    <div class="grid-formacao">
 
-        <div class="conteudo">
-          <h3>IFRS - Instituto Federal</h3>
-          <p class="cargo">Técnico em Informática</p>
-          <ul>
-            <li>Formação técnica com foco em programação, redes e manutenção de computadores.</li>
-          </ul>
-        </div>
+      <div class="card-formacao">
+        <span class="ano">2025 - Atualmente</span>
+        <h3>Assistente Administrativo</h3>
+        <p class="instituicao"> <i class="fas fa-briefcase"></i> Innovativa Medicina e Segurança do Trabalho</p>
+        <p>Elaboração de documentos técnicos e realização de suporte à clientes.</p>
+      </div>
+  
+      <div class="card-formacao">
+        <span class="ano">2024 - 2025</span>
+        <h3>Auxiliar Administrativo</h3>
+        <p class="instituicao"> <i class="fas fa-briefcase"></i> Innovativa Medicina e Segurança do Trabalho</p>
+        <p>Resolução de questões rotineiras com autonomia e confiança, alcançando resultados positivos.</p>
+      </div>
+  
+      <div class="card-formacao">
+        <span class="ano">2022 - 2024</span>
+        <h3>Secretário</h3>
+        <p class="instituicao"> <i class="fas fa-briefcase"></i> Innovativa Medicina e Segurança do Trabalho</p>
+        <p>Organização de documentos internos e de clientes, separando por assuntos para agilizar a procura em momentos necessários.</p>
+      </div>
 
     </div>
   </section>
