--- a/index.html
+++ b/index.html
@@ -143,11 +143,43 @@
 
   <section id="projetos">
     <h2>Projetos</h2>
-    <div class="projeto">
-      <h3>Projeto 1</h3>
-      <p>Descrição breve do projeto.</p>
-      <a href="#">Ver no GitHub</a>
+    <div class="grid-projetos">
+
+      <a href="https://github.com/MarcelAssu/Biblioteca" class="card" target="_blank" id="topo">
+        <img src="Assets/Imagens/biblioteca.jpg" alt="Biblioteca">
+        <div class="conteudo">
+          <h3>📚 Biblioteca</h3>
+          <p>Biblioteca em Java com CRUD habilitado no gerenciamento de livros, a partir de linha de comando</p>
+        </div>
+      </a>
+  
+      <a href="https://github.com/MarcelAssu/Projeto_Forca" class="card" target="_blank" id="topo2">
+        <img src="Assets/Imagens/forca.webp" alt="Forca">
+        <div class="conteudo">
+          <h3>#️⃣ Jogo da Forca</h3>
+          <p>Jogo da Forca em Python a partir de linhas de comando estilizadas</p>
+        </div>
+      </a>
+  
+      <a href="https://github.com/MarcelAssu/Posto_de_Combustivel" class="card" target="_blank">
+        <img src="Assets/Imagens/biblioteca.jpg" alt="Posto de Combustível">
+        <div class="conteudo">
+          <h3>🎮 Posto de Combustível</h3>
+          <p>Gerrenciador de Combustível de um posto, programado em Java, a partir de linha de comando</p>
+        </div>
+      </a>
+
+      <a href="https://github.com/Joaquim-Lorenzoni/JornadaPidona" class="card" target="_blank">
+        <img src="Assets/Imagens/lobo.avif" alt="Jogo do Lobo">
+        <div class="conteudo">
+          <h3>🐺 Jogo do Lobo</h3>
+          <p>Jogo feito em Python com possibilidade de diversas tentativas e de subir de Ranking</p>
+        </div>
+      </a>
+
+      
     </div>
+
   </section>
 
   <section id="contato">
