--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <p id="inicio"></p>
   <section id="home">
+
     <div class="home-container">
       <div class="home-text">
         <h3>Olá, eu sou o </h3>
@@ -42,14 +43,18 @@
 
   <hr>
   <section id="sobre">
+
     <h2>Sobre mim</h2>
     <p>Olá, me chamo Marcel, tenho o curso de Técnico em Informática completo pela IFSUL e estou atualmente cursando meu bacharelado em Ciência da Computação na Atitus Educação. 
       Tenho um ótimo espírito de coleguismo para trabalho em equipe e uma grande vontade em aperfeiçoar meus conhecimentos.</p>
+
   </section>
 
   <section id="formAcademica">
+
     <h2>Formação Academica</h2>
     <div class="linha-tempo">
+
       <div class="item">
         <div class="periodo">2024 - 2027</div>
         <div class="conteudo">
@@ -60,6 +65,7 @@
           </ul>
         </div>
       </div>
+
       <div class="item">
         <div class="periodo">2023 - 2024</div>
         <div class="conteudo">
@@ -70,6 +76,7 @@
             <p id="incompleto">INCOMPLETO</p>
           </ul>
         </div>
+
       <div class="item">
         <div class="periodo">2019 - 2021</div>
         <div class="conteudo">
@@ -80,10 +87,12 @@
           </ul>
         </div>
       </div>
+
     </div>
   </section>
 
   <section id="formProfi">
+
     <h2>Formação Profissional</h2>
     <div class="grid-formacao">
 
@@ -112,36 +121,45 @@
   </section>
 
   <section id="habilidades">
+
     <h2>Habilidades</h2>
     <div class="lista-habilidades">
+
       <div class="habilidade">
         <img src="Assets/Imagens/html.png" alt="HTML">
         <p>HTML</p>
       </div>
+
       <div class="habilidade">
         <img src="Assets/Imagens/css.png" alt="CSS">
         <p>CSS</p>
       </div>
+
       <div class="habilidade">
         <img src="Assets/Imagens/javascript.webp" alt="JavaScript">
         <p>JavaScript</p>
       </div>
+
       <div class="habilidade">
         <img src="Assets/Imagens/git.png" alt="Git & GitHub">
         <p>Git & GitHub</p>
       </div>
+
       <div class="habilidade">
         <img src="Assets/Imagens/python.webp" alt="Python">
         <p>Python</p>
       </div>
+
       <div class="habilidade">
         <img src="Assets/Imagens/java.png" alt="Java">
         <p>Java</p>
       </div>
+
     </div>
   </section>
 
   <section id="projetos">
+
     <h2>Projetos</h2>
     <div class="grid-projetos">
 
@@ -177,24 +195,27 @@
         </div>
       </a>
 
-      
     </div>
 
   </section>
 
   <section id="contato">
+
     <h2>Contato</h2>
     <div class="contato-grid">
+
       <div class="contato-box">
         <i class="fas fa-map-marker-alt"></i>
         <h3>Endereço</h3>
-        <p>Rua Dona Ernestina, 22<br>Bairro Vera Cruz<br>Passo Fundo - RS</p>
+        <p>Passo Fundo - RS<br>Brasil</p>
       </div>
+
       <div class="contato-box">
         <i class="fas fa-envelope"></i>
         <h3>Email</h3>
         <p>marcelassuncao0807@gmail.com</p>
       </div>
+
       <div class="contato-box">
         <i class="fas fa-share-alt"></i>
         <h3>Redes Sociais</h3>
@@ -204,12 +225,28 @@
           <a href="https://www.instagram.com/marcel.assuncao_/"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
+
       <div class="contato-box">
         <i class="fas fa-phone"></i>
         <h3>Telefone</h3>
         <p>(54) 9 8446-9288</p>
       </div>
+
     </div>
+  </section>
+
+  <section class="formulario-contato">
+  
+    <h2>Entre em contato comigo</h2>
+    <p>Tem uma ideia ou proposta? Me envie uma mensagem!</p>
+  
+    <form action="https://formsubmit.co/marcelassuncao0807@gmail.com" method="POST">
+      <input type="text" name="name" placeholder="Seu Nome" required>
+      <input type="email" name="email" placeholder="Seu E-mail" required>
+      <textarea name="message" placeholder="Sua Mensagem" rows="5" required></textarea>
+      <button type="submit">Enviar</button>
+    </form>
+
   </section>
 
   <footer>
