--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </a>
   
       <a href="https://github.com/MarcelAssu/Posto_de_Combustivel" class="card" target="_blank">
-        <img src="Assets/Imagens/biblioteca.jpg" alt="Posto de Combustível">
+        <img src="Assets/Imagens/posto.jpeg" alt="Posto de Combustível">
         <div class="conteudo">
           <h3>🎮 Posto de Combustível</h3>
           <p>Gerrenciador de Combustível de um posto, programado em Java, a partir de linha de comando</p>
